# learning_ESP32S3

./: README.md
Wireless_tools/: CMakeLists.txt  partitions.csv  readme.md  sdkconfig  sdkconfig.old  无线工具下位机程序流程图.vsd
Wireless_tools/components/klp485/: CMakeLists.txt  klp485.c
Wireless_tools/components/klpapsta/: CMakeLists.txt  klpapsta.c
Wireless_tools/components/klpcamera/: CMakeLists.txt  klpcamera.c
Wireless_tools/components/klpcan/: CMakeLists.txt  klpcan.c
Wireless_tools/components/klphttpserver/: CMakeLists.txt  klphttpserver.c
Wireless_tools/components/klplcd/: klplcd.c
Wireless_tools/components/klpusart/: CMakeLists.txt  klpusart.c
Wireless_tools/main/: idf_component.yml  main.c
miniproject/: sdkconfig  sdkconfig.old
miniproject/main/: main.c
sample_project/: sdkconfig  sdkconfig.old
sample_project/components/klpcamera/: CMakeLists.txt  klpcamera.c
sample_project/components/klpesptlshttpsclient/: CMakeLists.txt  klpesptlshttpsclient.c
sample_project/components/klpesptlshttpsclient/include/: klpesptlshttpsclient.h
sample_project/components/klpgpio/: CMakeLists.txt  klpgpio.c
sample_project/components/klphttpclient/: CMakeLists.txt  klphttpclient.c
sample_project/components/klphttpserver/: klphttpserver.c
sample_project/components/klphttpsrequest/: CMakeLists.txt  klphttpsrequest.c
sample_project/components/klplcd/: CMakeLists.txt  klplcd.c
sample_project/components/klpsntp/: CMakeLists.txt  klpsntp.c
sample_project/components/klpudp/: klpudp.c  (+1 more)
sample_project/main/: idf_component.yml  main - 副本.cpp  main.c  main.cpp
(+29 files in other folders)
